# MED

./: .gitignore  CMakeCache.txt  MED  MED.VC.db  MED.psess  MED.sln  MED1.psess  MED180127.vspx  MED180130(1).vspx  MED180130.vspx  MED2.psess  MED3.psess  MED4.psess  Makefile  README.md  Report20180127-1749.vspx  cmake_install.cmake
Debug/: MED.ilk
MED/: BorutaForest.cpp  BorutaForest.h  DataTypes.h  KoronackiForest.cpp  KoronackiForest.h  MED.vcxproj  MED.vcxproj.filters  ParsedData.h  Parser.cpp  Parser.h  SprintPartition.cpp  SprintPartition.h  SprintTree.cpp  SprintTree.h  ad.txt  adult-test.txt  adult.txt  flag-learn.txt  flag-test.txt  flag.txt  main.cpp  tumor.txt
MED/Debug/: vc140.idb  vc141.idb
MED/Debug/MED.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MED.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MED/primary_tumor/: classifier-params.txt  data_full.csv  rule-miner-params.txt
MED/x64/Debug/: main.obj.enc  sprinttree.obj.enc  vc140.idb  vc141.idb
MED/x64/Debug/MED.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MED.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TeX/: BrodzkiArtur_Projekt1_MED.r  BrodzkiArtur_Projekt2_MED.r  BrodzkiArtur_Projekt3_MED.r  dokumentacja.aux  dokumentacja.out  dokumentacja.tex
src/: CMakeLists.txt  MedConfig.h.in  main.cpp
x64/Debug/: MED.ilk
x64/Release/: MED.iobj  MED.ipdb  adult.txt  flag-learn.txt  flag-test.txt  flag.txt  results.txt  resultsAdult.txt  resultsFlag.txt  resultsTumor.txt  start.bat
(+8 files in other folders)
